<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:autofillHints="`"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnn1"
        android:layout_width="72dp"
        android:layout_height="53dp"
        android:layout_marginTop="36dp"
        android:text="@string/_1"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/btnsave"
        android:layout_width="72dp"
        android:layout_height="53dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btncall"
        app:layout_constraintTop_toTopOf="@+id/btncall" />

    <Button
        android:id="@+id/btncall"
        android:layout_width="72dp"
        android:layout_height="53dp"
        android:layout_marginTop="52dp"
        android:text="@string/call"
        app:layout_constraintEnd_toStartOf="@+id/btnsave"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnstr" />

    <Button
        android:id="@+id/btnstr"
        android:layout_width="72dp"
        android:layout_height="53dp"
        android:layout_marginTop="36dp"
        android:text="@string/star"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/btn0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />

    <Button
        android:id="@+id/btnhash"
        android:layout_width="72dp"
        android:layout_height="53dp"
        android:text="@string/hasg"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn0"
        app:layout_constraintTop_toTopOf="@+id/btn0" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="72dp"
        android:layout_height="53dp"
        android:text="@string/_0"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/btnhash"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnstr"
        app:layout_constraintTop_toTopOf="@+id/btnstr" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="72dp"
        android:layout_height="53dp"
        android:layout_marginTop="36dp"
        android:text="@string/_7"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="72dp"
        android:layout_height="53dp"
        android:text="@string/_9"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintTop_toTopOf="@+id/btn8" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="72dp"
        android:layout_height="53dp"
        android:text="@string/_8"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toTopOf="@+id/btn7" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="72dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:text="@string/_4"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnn1" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="72dp"
        android:layout_height="53dp"
        android:text="@string/_6"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintTop_toTopOf="@+id/btn5" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="72dp"
        android:layout_height="53dp"
        android:text="@string/_5"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toTopOf="@+id/btn4" />

    <Button
        android:id="@+id/btn03"
        android:layout_width="72dp"
        android:layout_height="53dp"
        android:text="@string/_3"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toTopOf="@+id/btn2" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="72dp"
        android:layout_height="53dp"
        android:text="@string/_2"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/btn03"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnn1"
        app:layout_constraintTop_toTopOf="@+id/btnn1" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/btndel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/btndel"
        android:layout_width="70dp"
        android:layout_height="53dp"
        android:text="@string/del"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="@+id/editText" />
</androidx.constraintlayout.widget.ConstraintLayout>